<?xml version="1.0"?>
<package>
  <name>hello_world</name>
  <version>0.1.1</version>
  <description>Hello world example.</description>
  <maintainer email="davidmichaelball@gmail.com">David Ball</maintainer>
  <license>BSD</license>
  <author>David Ball</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp</run_depend>

</package>

