<?xml version="1.0"?>
<package>
  <name>intro_marker_publisher</name>
  <version>0.1.1</version>
  <description>An introduction to publishing markers.</description>
  <maintainer email="davidmichaelball@gmail.com">David Ball</maintainer>
  <license>BSD</license>
  <author>David Ball</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>

</package>

