<?xml version="1.0"?>
<package>
  <name>intro_tf2</name>
  <version>0.2.2</version>
  <description>We create a simple tf2 broadcaster and listener that talk to each other.</description>
  <maintainer email="denis.stogl@mailbox.org">Denis Štogl</maintainer>
  <license>BSD</license>

  <author email="denis.stogl@mailbox.org">Denis Štogl</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>

</package>
